docs: incorrect path to endpoints has been fixed
